# Nova-Compiler

./: README.md  meson.build  runb.sh
.cache/clangd/index/: ast.hpp.80160D47A98339BF.idx  codegen.cpp.15D51CECE36324A1.idx  codegen.hpp.273AA0C99DF354E6.idx  config.cpp.FBFA1E8400B8D998.idx  lexer.cpp.086DED16781FBAB6.idx  lexer.hpp.F5A2665260172CDB.idx  main.cpp.308BBB80A8B218D7.idx  main.cpp.ECEF9B14D3B57D2B.idx  module.cpp.83169734EA8BB233.idx  module.hpp.8A60B26CD30DE913.idx  parser.cpp.AC0A63D653D6B19B.idx  parser.hpp.B8F86A78FE01E76B.idx  token.hpp.582617B2B80936C3.idx
compiler/src/: main.cpp
core/inc/: ast.hpp  codegen.hpp  lexer.hpp  module.hpp  parser.hpp  token.hpp
core/src/: codegen.cpp  lexer.cpp  module.cpp  parser.cpp
nova-vscode/: README.md  language-configuration.json  package.json
nova-vscode/syntaxes/: nova.tmLanguage.json
test/: math.nh  nova_program  test.cpp  test.ll  test.nl  update.sh
